RESOLVED FIXED130000
AudioBufferSourceNode stop attribute shouldn't throw exception in finished state
https://bugs.webkit.org/show_bug.cgi?id=130000
Summary AudioBufferSourceNode stop attribute shouldn't throw exception in finished state
Praveen Jadhav
Reported 2014-03-09 21:38:09 PDT
AudioBufferSourceNode may go to FINISHED_STATE even before stop method is called. AudioBufferSource will render silence if data is played completely and is not looping. In these cases, finish() is called which sets source node to FINISHED_STATE without waiting for stop call. A call to "stop" method after this shouldn't throw exception. This issue can be observed in http://www.kiddnation.com/wp-content/themes/kiddnation/flappyalfinal/
Attachments
Patch (1.63 KB, patch)
2014-03-09 21:59 PDT, Praveen Jadhav
no flags
Praveen Jadhav
Comment 1 2014-03-09 21:59:55 PDT
Created attachment 226278 [details] Patch Patch provided here ensures that call to "stop" method when source is in FINISHED_STATE won't trigger exception.
Jer Noble
Comment 2 2014-03-14 09:28:43 PDT
Comment on attachment 226278 [details] Patch r=me
WebKit Commit Bot
Comment 3 2014-03-14 10:01:36 PDT
Comment on attachment 226278 [details] Patch Rejecting attachment 226278 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 226278, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ostname `svn.webkit.org': Host not found (http://svn.webkit.org) at /usr/share/git-core/perl/Git/SVN.pm line 697 Died at Tools/Scripts/update-webkit line 123. Failed to run "['Tools/Scripts/update-webkit']" exit_code: 1 Updating OpenSource RA layer request failed: OPTIONS of 'http://svn.webkit.org/repository/webkit': Could not resolve hostname `svn.webkit.org': Host not found (http://svn.webkit.org) at /usr/share/git-core/perl/Git/SVN.pm line 697 Died at Tools/Scripts/update-webkit line 123. Full output: http://webkit-queues.appspot.com/results/6162593727119360
Gyuyoung Kim
Comment 4 2014-03-16 20:42:00 PDT
Comment on attachment 226278 [details] Patch Clearing flags on attachment: 226278 Committed r165716: <http://trac.webkit.org/changeset/165716>
Gyuyoung Kim
Comment 5 2014-03-16 20:42:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.