AudioBufferSourceNode stop attribute shouldn't throw exception in finished state. https://bugs.webkit.org/show_bug.cgi?id=130000.

Patch by Praveen R Jadhav <praveen.j@samsung.com> on 2014-03-16
Reviewed by Jer Noble.

AudioBufferSourceNode may go to FINISHED_STATE even before "stop" method is called
as silence rendered after audio data is played out when its not looping.
A call to "stop" method after this shouldn't throw exception.

* Modules/webaudio/AudioScheduledSourceNode.cpp:
(WebCore::AudioScheduledSourceNode::stop):

Canonical link: https://commits.webkit.org/148299@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165716 268f45cc-cd09-0410-ab3c-d52691b4dbfc